[REF] update getFirst to get(index)